--- a/cdap-ui/app/cdap/components/Pagination/Pagination.less
+++ b/cdap-ui/app/cdap/components/Pagination/Pagination.less
@@ -36,7 +36,10 @@
     opacity: 0;
     padding-left: 5px;
     padding-right: 5px;
-
+    &.first-page,
+    &.last-page {
+      display: none;
+    }
     &:hover,
     &.pressed {
       opacity: 0.8;
