--- a/cdap-ui/app/login/components/Card/Card.less
+++ b/cdap-ui/app/login/components/Card/Card.less
@@ -38,5 +38,6 @@
   }
   .card-body {
     padding: 15px;
+    padding-bottom: 0;
   }
 }
